erDiagram
    MODEL_RUN ||--|| MODEL_FIT_CONTRACT : freezes
    PRICING_MODEL_DEPLOYMENT ||--o{ MODEL_MONITOR_RUN : baseline_for
    DATASET_MANIFEST ||--o{ MODEL_MONITOR_RUN : observed_on
    MODEL_MONITOR_VARIANT ||--o{ MODEL_MONITOR_RUN : selects
    MODEL_FIT_CONTRACT ||--o{ MODEL_MONITOR_RUN : governs
    MODEL_MONITOR_RUN ||--o{ MODEL_MONITOR_TERM : records
    MODEL_MONITOR_RUN ||--o{ MODEL_MONITOR_LAMBDA : records
    MODEL_MONITOR_RUN ||--o{ MODEL_MONITOR_RELATIVITY : records
    MODEL_MONITOR_RUN ||--o{ MODEL_MONITOR_METRIC : records
